libs/@local/hashql/ast/tests/ui/lower/sanitizer/special-form-type-position.jsonc
//@ run: fail
//@ description: Ensure that special forms in invalid type positions are sanitized and error out
[
  "type",
  "A",
  "::kernel::special_form::let",
  //~^ ERROR cannot find type `let` in module `::kernel::special_form`
  "_"
]
